Modify the package name from mvc-skeleton-app to mvc-skeleton

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "iplox/mvc-skeleton-app",
+    "name": "iplox/mvc-skeleton",
     "description": "A skeleton mvc-app using IploxPhp, Smarty, jQuery and Bootstrap.",
     "authors": [
         {
