--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "iplox/mvc-skeleton",
+    "name": "iplox/iplox-mvc-skeleton",
     "description": "A skeleton mvc-app using Iplox, Smarty, jQuery and Bootstrap.",
     "authors": [
         {
